# crawlprime

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
src/crawl_prime/: __init__.py  api.py  main.py  pipeline.py  planner.py
tests/: conftest.py  test_processing.py
tests/integration/: conftest.py  test_pipeline_e2e.py  test_real_web.py
